--- a/src/modules/login/components/links/links.component.scss
+++ b/src/modules/login/components/links/links.component.scss
@@ -7,7 +7,8 @@
 }
 .links {
   color: black;
-  gap: 0.6rem;
+  gap: 0.6em;
+
   cursor: pointer;
   span {
     font-size: 1.2rem;
@@ -16,4 +17,13 @@
 p:hover,
 span:hover {
   color: $base-color;
+}
+
+@media (max-width: 671px) {
+  .links span {
+    display: none;
+  }
+  .active {
+    top: 0;
+  }
 }
