Updated project reg/login

--- a/src/app/modules/home/components/navbar/navbar.component.html
+++ b/src/app/modules/home/components/navbar/navbar.component.html
@@ -12,7 +12,11 @@
       (click)="home()"
     ></app-links>
     <app-links [txt]="links[0]" [imgLink]="imglinks[2]"></app-links>
-    <app-links [txt]="links[2]" [imgLink]="imglinks[3]"></app-links>
+    <app-links
+      [txt]="links[2]"
+      [imgLink]="imglinks[3]"
+      (click)="login()"
+    ></app-links>
     <app-links
       [txt]="links[3]"
       [imgLink]="imglinks[3]"
