--- a/src/app/modules/login/components/navbar/navbar.component.html
+++ b/src/app/modules/login/components/navbar/navbar.component.html
@@ -4,10 +4,10 @@
     <p class="nav-brand">{{ title }}</p>
   </div>
   <div class="flexActive middle">
-    <app-links [txt]="links[0]" [imgLink]="imglinks[1]"></app-links>
+    <!-- <app-links [txt]="links[0]" [imgLink]="imglinks[1]"></app-links>
     <app-links [txt]="links[1]" [imgLink]="imglinks[2]"></app-links>
     <app-links [txt]="links[2]" [imgLink]="imglinks[3]"></app-links>
-    <app-links [txt]="links[3]" [imgLink]="imglinks[3]"></app-links>
+    <app-links [txt]="links[3]" [imgLink]="imglinks[3]"></app-links> -->
 
     <!-- <div class="nav-btn" id="nav-btn">
       <img
